# showdown-replay-tool

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build_windows.py  docker-compose.yml  logs.txt  main.py  main.spec  pyproject.toml  test_bot.py  test_websocket.py  test_ws.py
.github/workflows/: build-windows.yml  ci.yml  test.yml
config/: ml_config.json  settings.json
models/: best_model.pt  training_history.json
src/: __init__.py  battle_env.py  cli.py  config_loader.py  db_manager.py  http_client.py  metagame_analyzer.py  orchestrator.py  replay_paginator.py  replay_parser.py  replay_storage.py  state_manager.py  visualizer.py
src/ml/: dataset.py  feature_extractor.py  inference_bot.py  model.py  plotter.py  trainer.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_loader.py  test_http_client.py  test_metagame_analyzer.py  test_replay_parser.py
