[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "showdown-replay-tool"
version = "1.0.0"
description = "Async downloader and metagame analyzer for Pokémon Showdown replays"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Mario", email = "user@example.com"}]
keywords = ["pokemon", "showdown", "vgc", "async", "scraper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "aiohttp>=3.9.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "aioresponses>=0.7.0"
]

[project.scripts]
showdown-cli = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings -v"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv", "tests"]
